# openapi.json
@@ -259,7 +259,12 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/ReceiptDTO"
+                "type": "string",
+                "enum": [
+                  "CREDIT_CARD",
+                  "DEBIT",
+                  "PIX"
+                ]
               }
             }
           },
@@ -595,35 +600,6 @@
               "DEBIT",
               "PIX"
             ]
-          }
-        }
-      },
-      "ReceiptDTO": {
-        "type": "object",
-        "properties": {
-          "id": {
-            "type": "string"
-          },
-          "totalToPay": {
-            "type": "number",
-            "format": "double"
-          },
-          "timeParked": {
-            "type": "string"
-          },
-          "vehicle": {
-            "$ref": "#/components/schemas/VehicleDTO"
-          },
-          "availablePaymentTypes": {
-            "type": "array",
-            "items": {
-              "type": "string",
-              "enum": [
-                "CREDIT_CARD",
-                "DEBIT",
-                "PIX"
-              ]
-            }
           }
         }
       },
